# DATA_PLATFORM

dcpm-core/: Dockerfile  docker-compose.yml  pyproject.toml
dcpm-core/app/: database.py  main.py
dcpm-core/app/audit/: constants.py  crud.py  models.py  router.py  schemas.py
dcpm-core/app/breach/: router.py
dcpm-core/app/classification/: crud.py  models.py  router.py  schemas.py
dcpm-core/app/config/: router.py
dcpm-core/app/ingestion/: crud.py  router.py  schemas.py
dcpm-core/app/lifecycle/: router.py
dcpm-core/app/rights/: router.py
dcpm-core/app/security/: router.py
dcpm-core/app/storage/: crud.py  models.py  router.py  schemas.py
dcpm-core/db/: ddl.sql
dcpm-core/db/init/: 001_initial_schema.sql
